lots of progress

--- a/packages/docs/src/styles/global.css
+++ b/packages/docs/src/styles/global.css
@@ -9,3 +9,11 @@ body {
     min-height: 100%;
     overflow: auto;
 }
+
+a {
+    color: #2458B3;
+}
+
+.language-javascript, .language-text, .language-json {
+    border-radius: 10px;
+}
