--- a/packages/docs/src/components/page-wrapper/PageWrapper.module.css
+++ b/packages/docs/src/components/page-wrapper/PageWrapper.module.css
@@ -12,13 +12,15 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
 
     background-color: #F9F9F9;
 }
 
 .content {
+    flex: 1 1 auto;
+
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
