--- a/packages/docs/src/components/page-wrapper/PageWrapper.module.css
+++ b/packages/docs/src/components/page-wrapper/PageWrapper.module.css
@@ -16,8 +16,14 @@
     background-color: #F9F9F9;
 }
 
+.scrollable {
+    overflow: auto;
+}
+
 .content {
     flex: 1 1 auto;
+
+    margin: 20px;
 
     display: flex;
     flex-direction: column;
