--- a/packages/docs/src/components/header/Header.module.css
+++ b/packages/docs/src/components/header/Header.module.css
@@ -1,7 +1,9 @@
 .header {
+    flex: 0 0 auto;
+
     width: 100%;
     height: 50px;
-    background-color: #00B3A4;
+    background-color: #6B9FA1;
 
     display: flex;
     flex-direction: row;
@@ -23,7 +25,7 @@
 }
 
 .links {
-    margin-right: 20px;
+    margin-right: 40px;
 
     display: flex;
     flex-direction: row;
@@ -32,5 +34,5 @@
 }
 
 .gitLogo {
-    margin-top: 8px; /* manual tweak so it looks right */
+    margin-top: 9px; /* manual tweak so it looks right */
 }
