--- a/packages/docs/src/components/markdown-block/MarkdownBlock.module.css
+++ b/packages/docs/src/components/markdown-block/MarkdownBlock.module.css
@@ -9,6 +9,12 @@
     align-items: flex-start;
 }
 
+.title {
+    border: none;
+    font-size: 50px;
+    text-shadow: 0px 1px 3px rgba(0,0,0,0.25);
+}
+
 .left {
     flex: 1 1 auto;
     max-width: 700px;
@@ -22,7 +28,7 @@
     display: none;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 600px) and (min-height:850px) {
     .right {
         margin-left: 20px;
         flex: 0 0 auto;
@@ -34,5 +40,27 @@
 }
 
 .tableOfContents {
+    margin-top: 50px;
     position: fixed;
+}
+
+.tableOfContents ul {
+    margin: 0;
+}
+
+.tableOfContents li {
+    list-style-type: none;
+}
+
+.tableOfContents ul ul {
+    font-size: 14px;
+    margin-left: 5px;
+}
+
+.tableOfContents ul ul li {
+    margin-left: 5px;
+}
+
+.tableOfContents ul ul ul a {
+    color: #A7B6C2;
 }
