some more things

--- a/packages/docs/src/styles/variables.scss
+++ b/packages/docs/src/styles/variables.scss
@@ -5,4 +5,10 @@
  *
  */
 
-declare module "prismjs/components/prism-*";
+$primary-color: #fdcb6e;
+$secondary-color: #00b894;
+
+$background-color: #F9F9F9;
+
+$light-gray: #A7B6C2;
+$dark-gray: #293742;
