--- a/packages/docs/src/components/header/Header.module.scss
+++ b/packages/docs/src/components/header/Header.module.scss
@@ -1,9 +1,18 @@
+/*!
+ * Copyright (c) 2018 monorepolint (http://monorepolint.com). All Right Reserved.
+ *
+ * Licensed under the MIT license. See LICENSE file in the project root for details.
+ *
+ */
+
+@import "../../styles/variables.scss";
+
 .header {
     flex: 0 0 auto;
 
     width: 100%;
     height: 50px;
-    background-color: #6B9FA1;
+    background-color: $primary-color;
 
     display: flex;
     flex-direction: row;
@@ -21,7 +30,7 @@
 
 .logo {
     margin: 0;
-    color: #F9F9F9;
+    color: $background-color;
 }
 
 .links {
