--- a/packages/docs/src/components/markdown-block/MarkdownBlock.module.scss
+++ b/packages/docs/src/components/markdown-block/MarkdownBlock.module.scss
@@ -1,3 +1,12 @@
+/*!
+ * Copyright (c) 2018 monorepolint (http://monorepolint.com). All Right Reserved.
+ *
+ * Licensed under the MIT license. See LICENSE file in the project root for details.
+ *
+ */
+
+@import "../../styles/variables.scss";
+
 .wrapper {
     width: 100%;
     height: 100%;
@@ -13,6 +22,7 @@
     border: none;
     font-size: 50px;
     text-shadow: 0px 1px 3px rgba(0,0,0,0.25);
+    color: $primary-color;
 }
 
 .left {
@@ -62,5 +72,5 @@
 }
 
 .tableOfContents ul ul ul a {
-    color: #A7B6C2;
+    color: $light-gray;
 }
