--- a/packages/docs/src/components/page-wrapper/PageWrapper.module.scss
+++ b/packages/docs/src/components/page-wrapper/PageWrapper.module.scss
@@ -5,6 +5,8 @@
  *
  */
 
+@import "../../styles/variables.scss";
+
 .wrapper {
     position: absolute;
     height: 100%;
@@ -12,10 +14,15 @@
 
     display: flex;
     flex-direction: column;
-    background-color: #F9F9F9;
+    background-color: $background-color;
 }
 
 .scrollable {
+    flex: 1 1 auto;
+
+    display: flex;
+    flex-direction: column;
+
     overflow-y: scroll;
 }
 
