--- a/packages/docs/src/pages/index.module.scss
+++ b/packages/docs/src/pages/index.module.scss
@@ -1,7 +1,17 @@
+/*!
+ * Copyright (c) 2018 monorepolint (http://monorepolint.com). All Right Reserved.
+ *
+ * Licensed under the MIT license. See LICENSE file in the project root for details.
+ *
+ */
+
+@import "../styles/variables.scss";
+
 .title {
     flex: 0 0 auto;
 
     text-shadow: 0px 1px 3px rgba(0,0,0,0.25);
+    color: $primary-color;
 
     font-size: 80px;
     border: none;
