--- a/packages/docs/src/components/page-wrapper/PageWrapper.module.scss
+++ b/packages/docs/src/components/page-wrapper/PageWrapper.module.scss
@@ -30,7 +30,9 @@
     flex: 1 1 auto;
 
     margin: 20px 50px 50px 50px;
+}
 
+.contentWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
