--- a/packages/docs/src/styles/global.scss
+++ b/packages/docs/src/styles/global.scss
@@ -27,7 +27,9 @@ h1 {
     color: $secondary-color;
 }
 
-.language-javascript, .language-text, .language-json {
-    border-radius: 10px;
-    box-shadow: 0px 1px 3px rgba(0,0,0,0.25);
+.gatsby-highlight {
+    > .language-javascript, > .language-text, > .language-json {
+        border-radius: 10px;
+        box-shadow: 0px 1px 3px rgba(0,0,0,0.25);
+    }
 }
